zmeny pred spanim

--- a/conference_poster/conference_poster_6.tex
+++ b/conference_poster/conference_poster_6.tex
@@ -91,6 +91,13 @@ Comenius University, Bratislava, Slovakia\\[0.2cm]
 
 \section*{Introduction}
 
+Pri nahlom preruseni dodavky kyslika nastanu metabolicke zmeny, ktore
+spravadza hromadenie urcitych metabolitov. Tieto metabolity ovplyvnuju
+silu maju urcity vplyv na silu kontrakcie v srdcovych bunkach a preto sme
+sa rozhodli vykonat analyzu citlivosti, ktora by rozhodla, ktore z
+parametrov maju vyznamny vplyv na silu. Upravili a rozsirili sme 
+myofilamentovy model od uja Rajsa (ref 1).\\
+
 In sudden oxygen delivery cut-off, the metabolical changes occurs, which
 have direct impact on cycle of heart muscle contraction. The
 concentrations of ATP and creatine-phosphate are quickly decreasing and
@@ -230,7 +237,7 @@ tortor consectetur non commodo nisi sollicitudin.
 
 \begin{center}%\vspace{1cm}
 \includegraphics[scale=1.0]{poster/graf1}
-\captionof{figure}{\color{Green} Figure caption}
+\captionof{figure}{\color{Green} Zmen}
 \end{center}%\vspace{1cm}
 
 \begin{center}%\vspace{1cm}
@@ -262,16 +269,16 @@ placerat eget tincidunt nec, ornare in nisl. In placerat.
 
 \begin{itemize}
 
-\item Pellentesque eget orci eros. Fusce ultricies, tellus et pellentesque
-    fringilla, ante massa luctus libero, quis tristique purus urna nec
-    nibh. Phasellus fermentum rutrum elementum. Nam quis justo lectus.
-\item Vestibulum sem ante, hendrerit a gravida ac, blandit quis magna.
-\item Donec sem metus, facilisis at condimentum eget, vehicula ut massa.
-    Morbi consequat, diam sed convallis tincidunt, arcu nunc.
-\item Nunc at convallis urna. isus ante. Pellentesque condimentum dui.
-    Etiam sagittis purus non tellus tempor volutpat. Donec et dui non
-    massa tristique adipiscing.
+\item Sensitivity analysis ukazala, ze pH a Pi maju najvacsi vplyv
+    na znizenie sily kontrakcie.
+
+\item During 10 minutes of ischemia force rapidly decrease to 10\%, co je
+    v sulade s experimentalnymi datami (Terkildsen ref 3)
+
 \end{itemize}
+
+
+
 
 \color{DarkSlateGray} % Set the color back to DarkSlateGray for the rest of the content
 
@@ -281,10 +288,10 @@ placerat eget tincidunt nec, ornare in nisl. In placerat.
 
 \section*{Forthcoming Research}
 
-Vivamus molestie, risus tempor vehicula mattis, libero arcu volutpat
-purus, sed blandit sem nibh eget turpis. Maecenas rutrum dui blandit lorem
-vulputate gravida. Praesent venenatis mi vel lorem tempor at varius diam
-sagittis. Nam eu leo id turpis interdum luctus a sed augue. Nam tellus.
+V buducich vyskumoch chceme rozsirit nas model o nove parametre, ktore suvisia s 
+mitochodnrialnou dysfunckou. Tieto patologicke stavy suvisia skor 
+s hypoxiou a jemnejsimi zmenami metabolitov v case. Okrem toho planujeme upravit
+regulaciu vapnika s napojenim na ionove kanaly a ryanodinove receptory.
 
  %----------------------------------------------------------------------------------------
 %   REFERENCES
